Propagate SetBounds to mPreviousViewer so that resizes work correctly during paint suppression, which is especially important for Firefox infobar.  b=290991  r=bzbarsky  sr=roc  a=bsmedberg